--- a/master/dgbowl_schemas.tomato.payload_0_1.html
+++ b/master/dgbowl_schemas.tomato.payload_0_1.html
@@ -28,14 +28,18 @@
     <nav data-toggle="wy-nav-shift" class="wy-nav-side">
       <div class="wy-side-scroll">
         <div class="wy-side-nav-search" >
-            <a href="index.html" class="icon icon-home"> dgbowl-schemas
+
+          
+          
+          <a href="index.html" class="icon icon-home">
+            dgbowl-schemas
           </a>
               <div class="version">
                 master
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
-    <input type="text" name="q" placeholder="Search docs" />
+    <input type="text" name="q" placeholder="Search docs" aria-label="Search docs" />
     <input type="hidden" name="check_keywords" value="yes" />
     <input type="hidden" name="area" value="default" />
   </form>
@@ -77,7 +81,7 @@
         <div class="rst-content">
           <div role="navigation" aria-label="Page navigation">
   <ul class="wy-breadcrumbs">
-      <li><a href="index.html" class="icon icon-home"></a></li>
+      <li><a href="index.html" class="icon icon-home" aria-label="Home"></a></li>
           <li class="breadcrumb-item"><a href="dgbowl_schemas.html">dgbowl_schemas package</a></li>
           <li class="breadcrumb-item"><a href="dgbowl_schemas.tomato.html">dgbowl_schemas.tomato package</a></li>
       <li class="breadcrumb-item active">dgbowl_schemas.tomato.payload_0_1 package</li>
